logs/body.log
warning: unused import: `std::fs`
  --> body/mesh/src/mesh.rs:16:5
   |
16 | use std::fs;
   |     ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: `nervous-system` (lib) generated 1 warning (run `cargo fix --lib -p nervous-system` to apply 1 suggestion)
   Compiling ippoc-node v0.1.0 (/Users/abhishekjha/CODE/ippoc/body)
error[E0282]: type annotations needed for `Vec<_>`
   --> body/src/main.rs:305:25
    |
305 |                     let empty_vec = vec![];
    |                         ^^^^^^^^^   ------ type must be known at this point
    |
help: consider giving `empty_vec` an explicit type, where the placeholders `_` are specified
    |
305 |                     let empty_vec: Vec<_> = vec![];
    |                                  ++++++++

For more information about this error, try `rustc --explain E0282`.
error: could not compile `ippoc-node` (bin "ippoc-node") due to 1 previous error
